# ads-benchmark

./: .gitignore  CASE_STUDY.md  README.md  pyproject.toml  pyrightconfig.json
src/: allocator.py  example.py  sample_data.py
tests/: test_budget_allocator.py  test_campaign_state.py  test_example.py  test_simulate_next_hour.py
