[tool.poetry]
name = "glitch_techincal_interview"
version = "0.1.0"
description = ""
authors = ["adrixo <adrianvalrom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10"
pytest = "^8.4"
pandas = "^2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
